--- a/messagerie/resources/css/app.css
+++ b/messagerie/resources/css/app.css
@@ -15,7 +15,7 @@
     position: relative;
 }
 body {
-    background-image: url('../../../public/pictures/manUsingLaptop.jpg');
+    background-image: url('../../public/pictures/manUsingLaptopCopy.jpg');
     background-size: cover;
 }
 .nav{
@@ -23,13 +23,12 @@ body {
     flex-direction: column;
     align-items: center;
 }
-
-a:visited {
-    color: white;
-    text-decoration: none;
+.nav a{
+    width: 150px;
 }
 h3{
     color: white;
+    width: 60%;
     text-align: center;
-    margin: 50px;
+    margin: 80px auto;
 }
